--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-citus (5.0.0~rc.3-1) unstable; urgency=low
+citus (5.0.0-1) stable; urgency=low
 
   * Initial release
 
- -- Jason Petersen <jason@citusdata.com>  Fri, 04 Mar 2016 22:37:56 +0000
- 
+ -- Jason Petersen <jason@citusdata.com>  Thu, 24 Mar 2016 00:00:00 +0000
