--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (5.1.0~rc.1-1) unstable; urgency=low
+
+  * Release candidate for 5.1.
+
+ -- Jason Petersen <jason@citusdata.com>  Wed, 04 May 2016 19:26:23 +0000
+
 citus (5.0.1-1) unstable; urgency=low
 
   * Fixes issues on 32-bit systems
