Fully automate packaging; clean up spec
This change adds Enterprise Travis builds on Debian platforms (listed
in the Travis config). After checking whether a new nightly or release
is needed, Travis will build the necessary packages (in parallel using
a matrix build), sign all packages (using the Citus packaging key) and
upload them to packagecloud.io.

In addition, Debian build files have been tidied up; the Maintainer has
been changed from an individual to "Citus Data" (the Uploader field is
set to an individual's name by citus_package). A lintian-overrides file
is included to squelch any warnings or errors we'd rather ignore.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-citus-enterprise (5.1.0~rc.1-1) unstable; urgency=low
+citus-enterprise (5.1.0~rc.1-1) testing; urgency=low
 
   * Release candidate for 5.1.
 
