--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (5.1.0~rc.2-1) testing; urgency=low
+
+  * Fix EXPLAIN output when FORMAT JSON in use
+
+ -- Jason Petersen <jason@citusdata.com>  Mon, 16 May 2016 11:08:09 +0000
+
 citus (5.1.0~rc.1-1) testing; urgency=low
 
   * Release candidate for 5.1.
