--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+citus-rebalancer (5.1.0-1) stable; urgency=low
+
+  * Actually bumps extension version to 5.1
+
+  * Reworks SQL install file generation
+
+  * Adds gitignore
+
+  * Fixes execute bit on Travis scripts
+
+  * Travis now uses Citus package repo (repos.citusdata.com)
+
+ -- Jason Petersen <jason@citusdata.com>  Thu, 30 Jun 2016 19:14:40 +0000
+
 citus-rebalancer (5.1.0~rc.1-1) testing; urgency=low
 
   * Release candidate for 5.1.
