--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,31 @@
+citus-enterprise (5.2.2.citus-1) stable; urgency=low
+
+  * Adds support for IF NOT EXISTS clause of CREATE INDEX command
+
+  * Adds support for RETURN QUERY and FOR ... IN PL/pgSQL features
+
+  * Extends the router planner to handle more queries
+
+  * Changes COUNT of zero-row sets to return 0 rather than an empty result
+
+  * Reduces the minimum permitted task_tracker_delay to a single millisecond
+
+  * Fixes a bug that caused crashes during joins with a WHERE false clause
+
+  * Fixes a bug triggered by unique violation errors raised in long transactions
+
+  * Fixes a bug resulting in multiple registration of transaction callbacks
+
+  * Fixes a bug which could result in stale reads of distribution metadata
+
+  * Fixes a bug preventing distributed modifications in some PL/pgSQL functions
+
+  * Fixes some code paths that could hypothetically read uninitialized memory
+
+  * Lowers log level of "waiting for activity" messages
+
+ -- Jason Petersen <jason@citusdata.com>  Tue, 8 Nov 2016 18:43:37 +0000
+
 citus-enterprise (5.2.1.citus-1) stable; urgency=low
 
   * Fixes subquery pushdown to properly extract outer join qualifiers
