--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+citus (6.0.1.citus-3) stable; urgency=low
+
+  * First build using new versioning practices
+
+ -- Jason Petersen <jason@citusdata.com>  Wed, 8 Feb 2017 23:19:46 +0000
+
+citus (6.0.1.citus-2) stable; urgency=low
+
+  * Transitional package to guide users to new package name
+
+ -- Jason Petersen <jason@citusdata.com>  Mon, 6 Feb 2017 16:33:44 +0000
+
 citus (6.0.1.citus-1) stable; urgency=low
 
   * Fixes a bug causing failures during pg_upgrade
