--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-rebalancer (6.1.0.citus-1) stable; urgency=low
+
+  * Adds compatibility with Citus 6.1 and higher
+
+ -- Jason Petersen <jason@citusdata.com>  Tue, 21 Feb 2017 16:16:47 +0000
+
 citus-rebalancer (6.0.0.citus-3) stable; urgency=low
 
   * First build using new versioning practices
