--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (6.1.2.citus-1) stable; urgency=low
+
+  * Fixes a common cause of deadlocks when repairing tables with foreign keys
+
+ -- Jason Petersen <jason@citusdata.com>  Wed, 31 May 2017 16:14:11 +0000
+
 citus (6.2.2.citus-1) stable; urgency=low
 
   * Fixes a common cause of deadlocks when repairing tables with foreign keys
