--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (6.2.4.citus-1) stable; urgency=low
+
+  * Updates task-tracker to limit file access
+
+ -- Burak Yucesoy <burak@citusdata.com>  Thu, 28 Sep 2017 23:33:05 +0000
+
 citus-enterprise (6.1.3.citus-1) stable; urgency=low
 
   * Updates task-tracker to limit file access
