--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+citus-rebalancer (7.1.0.citus-1) stable; urgency=low
+
+  * Adds zero downtime shard rebalancer
+
+  * Adds compatibility with Citus 7.1
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Wed, 15 Nov 2017 12:00:00 +0000
+
 citus-rebalancer (7.0.1.citus-1) stable; urgency=low
 
   * Fixes a bug that caused crash
