--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+citus (7.1.1.citus-1) stable; urgency=low
+
+  * Fixes a bug that could prevent pushing down subqueries with reference tables
+
+  * Fixes a bug that could create false positive distributed deadlocks
+
+  * Fixes a bug that could prevent running concurrent COPY and multi-shard DDL
+
+  * Fixes a bug that could mislead users about ANALYZE queries
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Tue, 05 Dec 2017 09:00:07 +0000
+
 citus (7.1.0.citus-1) stable; urgency=low
 
   * Adds support for native queries with multi shard UPDATE/DELETE queries
