--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (6.2.5.citus-1) stable; urgency=low
+
+  * Fixes a bug that could crash the coordinator while reporting a remote error
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Fri, 12 Jan 2018 06:33:05 +0000
+
 citus-enterprise (6.2.4.citus-1) stable; urgency=low
 
   * Updates task-tracker to limit file access
