--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-rebalancer (7.2.0.citus-1) stable; urgency=low
+  
+  * Adds compatibility with Citus 7.2
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Thu, 18 Jan 2018 13:12:25 +0000
+
 citus-rebalancer (7.1.0.citus-1) stable; urgency=low
 
   * Adds zero downtime shard rebalancer
