--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+citus-enterprise (7.2.1.citus-1) stable; urgency=low
+
+  * Fixes count distinct bug on column expressions when used with subqueries
+
+  * Adds support for respecting enable_hashagg in the master plan
+
+  * Fixes a bug canceling backends that are not involved in distributed deadlocks
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Wed, 07 Feb 2018 09:53:56 +0000
+
 citus-enterprise (7.2.0.citus-1) stable; urgency=low
 
   * Adds support for CTEs
@@ -5,6 +15,8 @@ citus-enterprise (7.2.0.citus-1) stable; urgency=low
   * Adds support for subqueries that require merge step
 
   * Adds support for set operations (UNION, INTERSECT, ...)
+
+  * Adds support for 2PC auto-recovery
 
   * Adds support for querying local tables in CTEs and subqueries
 
