--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-rebalancer (7.3.0.citus-1) stable; urgency=low
+
+  * Adds compatibility with Citus 7.3
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Fri, 16 Mar 2018 09:14:42 +0000
+
 citus-rebalancer (7.2.0.citus-1) stable; urgency=low
   
   * Adds compatibility with Citus 7.2
