--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+citus-enterprise (7.4.1.citus-1) stable; urgency=low
+
+  * Fixes a bug that could cause transactions to incorrectly proceed after failure
+
+  * Fixes a bug on INSERT ... SELECT queries in prepared statements
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Thu, 21 Jun 2018 06:13:16 +0000
+
 citus-enterprise (7.2.2.citus-1) stable; urgency=low
 
   * Fixes a bug that could cause SELECTs to crash during a rebalance
