--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (6.2.6.citus-1) stable; urgency=low
+
+  * Adds support for respecting enable_hashagg in the master planner
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Fri, 06 Jul 2018 13:30:08 +0000
+
 citus (7.4.1.citus-1) stable; urgency=low
 
   * Fixes a bug that could cause transactions to incorrectly proceed after failure
