--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,35 @@
+citus (7.5.0.citus-1) stable; urgency=low
+
+  * Adds foreign key support from hash distributed to reference tables
+
+  * Adds SELECT ... FOR UPDATE support for router plannable queries
+
+  * Adds support for non-partition columns in count distinct
+
+  * Fixes a segfault in real-time executor during online shard move
+
+  * Fixes ALTER TABLE ADD COLUMN constraint check
+
+  * Fixes a bug where INSERT ... SELECT was allowed to update distribution column
+
+  * Allows DDL commands to be sequentialized via citus.multi_shard_modify_mode
+
+  * Adds support for topn_union_agg and topn_add_agg across shards
+
+  * Adds support for hll_union_agg and hll_add_agg across shards
+
+  * Fixes a bug that might cause shards to have a wrong owner
+
+  * GUC select_opens_transaction_block defers opening transaction block on workers
+
+  * Utils to implement DDLs for policies in future, warn about being unsupported
+
+  * Intermediate results use separate connections to avoid interfering with tasks
+
+  * Adds a node_conninfo GUC to set outgoing connection settings
+
+ -- Mehmet Furkan Sahin <furkan@citusdata.com>  Wed, 25 Jul 2018 9:32:24 +0000
+
 citus (6.2.6.citus-1) stable; urgency=low
 
   * Adds support for respecting enable_hashagg in the master planner
