--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (7.4.2.citus-1) stable; urgency=low
+
+  * Fixes a segfault in real-time executor during online shard move
+
+ -- Mehmet Furkan Sahin <furkan@citusdata.com>  Fri, 27 Jul 2018 13:42:27 +0000
+
 citus (7.5.0.citus-1) stable; urgency=low
 
   * Adds foreign key support from hash distributed to reference tables
