--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+citus (7.5.1.citus-1) stable; urgency=low
+
+  * Improves query pushdown planning performance
+
+  * Fixes a bug that could cause modifying CTEs to select wrong execution mode
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Wed, 29 Aug 2018 08:06:42 +0000
+
 citus (7.4.2.citus-1) stable; urgency=low
 
   * Fixes a segfault in real-time executor during online shard move
