Various fixes to make Lintian happy

--- a/debian/changelog
+++ b/debian/changelog
@@ -72,7 +72,7 @@ citus (7.5.0.citus-1) stable; urgency=low
 
   * Fixes ALTER TABLE ADD COLUMN constraint check
 
-  * Fixes a bug where INSERT ... SELECT allows one to update distribution column
+  * Fixes a bug where INSERT ... SELECT allows one to update dist. column
 
   * Allows DDL commands to be sequentialized via citus.multi_shard_modify_mode
 
@@ -100,7 +100,7 @@ citus (6.2.6.citus-1) stable; urgency=low
 
 citus (7.4.1.citus-1) stable; urgency=low
 
-  * Fixes a bug that could cause transactions to incorrectly proceed after failure
+  * Fixes a bug that could cause txns to incorrectly proceed after failure
 
   * Fixes a bug on INSERT ... SELECT queries in prepared statements
 
@@ -114,9 +114,9 @@ citus (7.2.2.citus-1) stable; urgency=low
 
 citus (7.4.0.citus-1) stable; urgency=low
 
-  * Adds support for non-pushdownable subqueries and CTEs in UPDATE/DELETE queries
+  * Adds support for non-pushdownable subqueries and CTEs in UPDATE/DELETE
 
-  * Adds support for pushdownable subqueries and joins in UPDATE/DELETE queries
+  * Adds support for pushdownable subqueries and joins in UPDATE/DELETE
 
   * Adds faster shard pruning for subqueries
 
@@ -132,9 +132,9 @@ citus (7.4.0.citus-1) stable; urgency=low
 
   * Removes broadcast join logic
 
-  * Deprecates large_table_shard_count and master_expire_table_cache()  
+  * Deprecates large_table_shard_count and master_expire_table_cache()
 
-  * Modifies master_update_node to lock write on shards hosted by node over update
+  * Modifies master_update_node to write-lock shards hosted by node over update
 
   * DROP TABLE now drops shards as the currrent user instead of the superuser
 
@@ -156,7 +156,7 @@ citus (7.3.0.citus-1) stable; urgency=low
 
   * Adds support for modifying CTEs
 
-  * Adds recursive plan for subqueries in WHERE clause with recurring FROM clause
+  * Adds recursive plan for WHERE clause subqueries with recurring FROM clause
 
   * Adds support for bool_ and bit_ aggregates
 
@@ -170,11 +170,11 @@ citus (7.3.0.citus-1) stable; urgency=low
 
   * Fixes a bug on planner when DISTINCT (ON) clause is used with GROUP BY
 
-  * Fixes a bug of creating coordinator planner with distinct and aggregate clause
+  * Fixes a planner bug with distinct and aggregate clauses
 
-  * Fixes a bug that could open a new connection on every table size function call
+  * Fixes a bug that opened new connections on each table size function call
 
-  * Fixes a bug canceling backends that are not involved in distributed deadlocks
+  * Fixes a bug canceling backends not involved in distributed deadlocks
 
   * Fixes count distinct bug on column expressions when used with subqueries
 
@@ -190,7 +190,7 @@ citus (7.2.1.citus-1) stable; urgency=low
 
   * Adds support for respecting enable_hashagg in the master plan
 
-  * Fixes a bug canceling backends that are not involved in distributed deadlocks
+  * Fixes a bug canceling backends not involved in distributed deadlocks
 
  -- Burak Velioglu <velioglub@citusdata.com>  Tue, 06 Feb 2018 14:46:07 +0000
 
@@ -210,9 +210,7 @@ citus (7.2.0.citus-1) stable; urgency=low
 
   * Adds support for count(distinct) in queries with a subquery
 
-  * Adds support for non-equijoins when there is already an equijoin for queries
-
-  * Adds support for non-equijoins when there is already an equijoin for subquery
+  * Adds support for non-equijoins when there is already an equijoin
 
   * Adds support for real-time executor to run in transaction blocks
 
@@ -236,9 +234,9 @@ citus (7.2.0.citus-1) stable; urgency=low
 
   * Improves support for using functions in subqueries
 
-  * Fixes a bug that could cause real-time executor to crash during cancellation
+  * Fixes a bug that causing real-time executor to crash during cancellation
 
-  * Fixes a bug that could cause real-time executor to get stuck on cancellation
+  * Fixes a bug that causing real-time executor to get stuck on cancellation
 
   * Fixes a bug that could block modification queries unnecessarily
 
@@ -246,13 +244,13 @@ citus (7.2.0.citus-1) stable; urgency=low
 
   * Fixes a bug that could cause an assert failure with ANALYZE statements
 
-  * Fixes a bug that could allow pushing down wrong set operations in subqueries
+  * Fixes a bug that would push down wrong set operations in subqueries
 
   * Fixes a bug that could cause a deadlock in create_distributed_table
 
   * Fixes a bug that could confuse user about ANALYZE usage
 
-  * Fixes a bug that could lead to false positive distributed deadlock detections
+  * Fixes a bug causing false positive distributed deadlock detections
 
   * Relaxes the locking for DDL commands on partitioned tables
 
@@ -278,7 +276,7 @@ citus (7.1.2.citus-1) stable; urgency=low
 
 citus (7.1.1.citus-1) stable; urgency=low
 
-  * Fixes a bug that could prevent pushing down subqueries with reference tables
+  * Fixes a bug preventing pushing down subqueries with reference tables
 
   * Fixes a bug that could create false positive distributed deadlocks
 
@@ -312,7 +310,7 @@ citus (7.1.0.citus-1) stable; urgency=low
 
   * Adds support for adding primary key using already defined index
 
-  * Adds parameter to shard copy functions to support distinct replication models
+  * Adds replication parameter to shard copy functions
 
   * Changes shard_name UDF to omit public schema name
 
@@ -324,7 +322,7 @@ citus (7.1.0.citus-1) stable; urgency=low
 
   * Fixes a bug that could prevent attaching partitions to a table in schema
 
-  * Fixes a bug that could prevent adding a node to cluster with reference table
+  * Fixes a bug preventing adding nodes to clusters with reference tables
 
   * Fixes a bug that could cause a crash with INSERT ... SELECT queries
 
@@ -524,7 +522,7 @@ citus (6.2.0.citus-1) stable; urgency=low
 
   * Fixes a bug causing incorrectly reading invalidated cache
 
-  * Fixes a bug related to creation of schemas of in workers with incorrect owner
+  * Fixes a bug related to creation of schemas in workers with incorrect owner
 
   * Fixes a bug related to concurrent run of shard drop functions
 
@@ -762,7 +760,7 @@ citus (5.2.2.citus-1) stable; urgency=low
 
   * Fixes a bug that caused crashes during joins with a WHERE false clause
 
-  * Fixes a bug triggered by unique violation errors raised in long transactions
+  * Fixes a bug triggered by unique violation errors raised in long txns
 
   * Fixes a bug resulting in multiple registration of transaction callbacks
 
