--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+hll (2.12.citus-1) stable; urgency=low
+
+  * Support for PostgreSQL 11 and bug fixes
+
+ -- Burak Yucesoy <burak@citusdata.com>  Sat, 03 Nov 2018 01:40:23 +0000
+
+hll (2.11.citus-1) stable; urgency=low
+
+  * Support for PostgreSQL 11
+
+ -- Burak Yucesoy <burak@citusdata.com>  Sat, 25 Aug 2018 02:45:28 +0000
+
 hll (2.10.2.citus-1) stable; urgency=low
 
   * Support for testing against PostgreSQL 10
