--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+citus-enterprise (7.5.3.citus-1) stable; urgency=low
+
+  * Fixes inconsistent metadata error when shard metadata caching get interrupted
+
+  * Fixes a bug that could cause memory leak
+
+  * Fixes a bug that prevents recovering wrong transactions in MX
+
+  * Fixes a bug to prevent wrong memory accesses on Citus MX under very high load
+
+  * Fixes crashes caused by stack size increase under high memory load
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Tue, 27 Nov 2018 19:54:36 +0000
+
 citus-enterprise (7.5.2.citus-1) stable; urgency=low
 
   * Fixes inconsistent metadata error when shard metadata caching get interrupted
