--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (8.0.1.citus-1) stable; urgency=low
+
+  * Execute SQL tasks using worker_execute_sql_task UDF when using task-tracker
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Wed, 28 Nov 2018 11:38:47 +0000
+
 citus (7.5.3.citus-1) stable; urgency=low
 
   * Execute SQL tasks using worker_execute_sql_task UDF when using task-tracker
